--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ body {
     text-align: center;
 }
 
+.stats-card:hover {
+    cursor: pointer;
+    box-shadow: 0 0 30px lightblue;
+}
+
 #num-contributions, #total-raised, #num-games {
     font-size: 50px;
 }
